[gd_scene load_steps=8 format=3 uid="uid://bqbsfxetmgd68"]

[ext_resource type="PackedScene" uid="uid://darxc13rlkwt7" path="res://scenes/objects/object.tscn" id="1_mbkog"]
[ext_resource type="Script" uid="uid://bh2vyc2xkbfr8" path="res://scenes/objects/furnace/furnace.gd" id="2_qnkj5"]
[ext_resource type="Texture2D" uid="uid://bxas7kak8qs4e" path="res://res/sprites/objects/furnace_on.png" id="3_ijwyf"]
[ext_resource type="Texture2D" uid="uid://8qgko7xxw0yh" path="res://res/sprites/objects/furnace_off.png" id="4_fn88o"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_fyjhv"]
height = 1.1954346
radius = 1.315918

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_mbkog"]
properties/0/path = NodePath("Sprite3D:visible")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath("ToggleOn:visible")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath("Shadow:visible")
properties/2/spawn = true
properties/2/replication_mode = 2

[sub_resource type="GDScript" id="GDScript_mbkog"]
script/source = "extends RayCast3D

@onready var parent := get_parent()


func _physics_process(_delta: float) -> void:
	if not is_colliding():
		parent.global_position.y -= 0.1
	else:
		self.queue_free()
"

[node name="Furnace" instance=ExtResource("1_mbkog")]
script = ExtResource("2_qnkj5")
nname = "furnace"
drop_name = "stone"

[node name="HealthComponent" parent="." index="0"]
max_health = 5.0

[node name="CollisionShape3D" parent="." index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.03913629, 1.1595132, -0.03717804)
shape = SubResource("CylinderShape3D_fyjhv")

[node name="Sprite3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.039, 1.541, -0.036)
texture = ExtResource("4_fn88o")

[node name="ToggleOn" type="Node3D" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.039, 1.541, -0.036)
visible = false

[node name="Sprite3D" type="Sprite3D" parent="ToggleOn" index="0"]
visibility_range_end = 500.0
billboard = 2
shaded = true
double_sided = false
alpha_cut = 1
texture = ExtResource("3_ijwyf")

[node name="OmniLight3D" type="OmniLight3D" parent="ToggleOn" index="1"]
light_color = Color(1, 0.6862745, 0.39215687, 1)
light_energy = 6.172

[node name="MultiplayerSynchronizer2" type="MultiplayerSynchronizer" parent="." index="6"]
replication_config = SubResource("SceneReplicationConfig_mbkog")

[node name="FallRay" type="RayCast3D" parent="." index="7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.024490118, 0)
target_position = Vector3(0, -0.12, 0)
script = SubResource("GDScript_mbkog")

[node name="CraftTimer" type="Timer" parent="." index="8"]
wait_time = 5.0

[connection signal="timeout" from="CraftTimer" to="." method="_on_craft_timer_timeout"]
